--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!-- This the main linear layout for the main activity. -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <!-- Add the ImageView for the Starbucks logo. -->
+    <ImageView
+        android:id="@+id/starbuckslog"
+        android:layout_width="232dp"
+        android:layout_height="152dp"
+        android:layout_marginTop="25dp"
+        app:srcCompat="@drawable/starsuckslogo"
+        android:layout_gravity="center_horizontal"
+        />
+
+
+    <!-- Add the TextView for the order now label. -->
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_gravity="center_horizontal"
+        android:fontFamily="@font/hind_guntur_light"
+        android:text="@string/order_now_label"
+        android:textColor="@color/starbucksGreen"
+        android:textSize="30sp" />
+
+    <!-- Add the ScrollView for the images. -->
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+
+
+            <ImageView
+                android:id="@+id/img_sb1"
+                android:layout_width="232dp"
+                android:layout_height="152dp"
+                app:srcCompat="@drawable/sb1"
+                android:layout_gravity="center_horizontal"
+                />
+
+            <ImageView
+                android:id="@+id/img_sb2"
+                android:layout_width="232dp"
+                android:layout_height="152dp"
+                app:srcCompat="@drawable/sb2"
+                android:layout_gravity="center_horizontal"
+                />
+
+            <ImageView
+                android:id="@+id/img_sb3"
+                android:layout_width="232dp"
+                android:layout_height="152dp"
+                app:srcCompat="@drawable/sb3"
+                android:layout_gravity="center_horizontal"
+                />
+
+            <ImageView
+                android:id="@+id/img_sb4"
+                android:layout_width="232dp"
+                android:layout_height="152dp"
+                app:srcCompat="@drawable/sb4"
+                android:layout_gravity="center_horizontal"
+                />
+
+            <ImageView
+                android:id="@+id/img_sb5"
+                android:layout_width="232dp"
+                android:layout_height="152dp"
+                app:srcCompat="@drawable/sb5"
+                android:layout_gravity="center_horizontal"
+                />
+
+            <ImageView
+                android:id="@+id/img_sb6"
+                android:layout_width="232dp"
+                android:layout_height="152dp"
+                app:srcCompat="@drawable/sb6"
+                android:layout_gravity="center_horizontal"
+                />
+
+
+
+        </LinearLayout>
+
+
+    </ScrollView>
 
 </LinearLayout>
