Just finished coding the order page and added a bit functionality

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
 
     <!-- Adding the new colour. -->
     <color name="starbucksGreen"> #00704A </color>
+    <color name="starsucksRed"> #FF0000 </color>
 </resources>
